--- a/gradle.properties
+++ b/gradle.properties
@@ -42,3 +42,7 @@ kotlin.stdlib.default.dependency=false
 kotlin.internal.mpp12x.deprecation.suppress=true
 kotlin.mpp.stability.nowarn=true
 kotlin.2js.nowarn=true
+JDK_16=/Library/Java/JavaVirtualMachines/jdk1.8.0_251.jdk/Contents/Home
+JDK_17=/Library/Java/JavaVirtualMachines/jdk1.8.0_251.jdk/Contents/Home
+JDK_18=/Library/Java/JavaVirtualMachines/jdk1.8.0_251.jdk/Contents/Home
+JDK_9=/Library/Java/JavaVirtualMachines/jdk-9.0.4.jdk/Contents/Home
